--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,21 @@ code {
   flex-direction: column;
 }
 
+.top-bar {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 15vw;
+  padding: 4vh 3vw;
+}
+
+.top-bar span {
+  display: flex;
+  font-size: xx-large;
+  font-weight: 600;
+  align-items: center;
+}
+
 .row {
   display: flex;
   flex-direction: row;
